--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@rainbow-me/animated-charts": "^1.0.0-alpha.6",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-gesture-handler": "^2.8.0",
+    "react-native-gesture-handler": "^2.6.2",
     "react-native-haptic-feedback": "^1.14.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-wagmi-charts": "^2.1.0"
